[package]
name = "velohaven-email"
description = "Email sender to Velohaven members"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
lettre = { version = "0.11", features = ["tokio1-native-tls", "mime03"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
parse_duration = "2"
reqwest_dav = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
url_encor = "1"
oauth2 = "5"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
humanize-duration = { version = "0.0.7", features = ["chrono"] }
